[package]
name = "escrow-program"
version = "0.1.0"
edition = "2018"
license = "WTFPL"
publish = false

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
solana-program = "=1.7.11"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
thiserror = "1.0.24"

[lib]
crate-type = ["cdylib", "lib"]
